# Typoon

./: .env.example  .gitignore  .npmrc  AGENTS.md  ARCHITECTURE.md  Cargo.toml  HANDOFF.md  ISSUE.md  PLAN.md  RFC-001-complete-arch-alignment.md  RFC-003-rust-rewrite.md  ROADMAP.md  compose.yml  config.toml  config.toml.example  models  package.json  probe_ocr.py  pyproject.toml
.antigravitycli/: d770efb2-ec6b-41e4-8078-b707f4b08383.json
crates/inpaint/: Cargo.toml  Dockerfile  pyproject.toml
crates/inpaint/scripts/: download_model.sh
crates/inpaint/src/: lib.rs  model.rs  page.rs  py.rs  s3.rs
crates/inpaint/src/adapters/: canny.rs  flat_fill.rs  mod.rs  png_codec.rs  rasterise.rs  stroke_detect.rs
crates/inpaint/src/domain/: bbox.rs  group.rs  mod.rs  plan.rs  profile.rs
crates/inpaint/src/ffi/: errors.rs  mod.rs  runtime.rs
crates/inpaint/src/pipeline/: close.rs  compose.rs  mod.rs  regions.rs  route.rs  sources.rs
crates/render/: Cargo.toml  pyproject.toml
crates/render/assets/prompts/: source_en.md
crates/render/src/: border.rs  core.rs  fit.rs  font.rs  layout.rs  lib.rs  py.rs  shape.rs  stitch.rs  types.rs  wasm.rs
crates/render/src/overlay/: mod.rs
docs/: ARCHITECTURE.md  DECISIONS.md  INSTRUCTIONS.md  MIGRATION.md  PHASE_1_STATE.md  README.md  active-architecture.md  lo-trinh-hoc-tieng-trung.md  rfc-008-chapter-brief-page-translation.md  rfc-pipeline-queue-api.md  server-implementation-playbook.md  ui-spec.md
docs/archive/: ARCHITECTURE.old.md  RFC-002-lazy-chapter-images.old.md  RFC-003-rust-rewrite.old.md  ROADMAP.old.md  rfc-008-chapter-brief-page-translation.old.md  vision-grouping-pipeline.ppocr-yolo.old.md
docs/rfc/: 001-prepared-chapter-boundary.md  001-project-workspace.md  002-visual-e2e-workflow.md  003-scan-stage.md  004-bunle-artifact-storage.md  005-postgres-only.md  006-discord-native-shared.md  008-api-tokens.md  009-browser-extension.md  material-architecture.md  v3-architecture.md  v3.5-app-client.md
docs/wiki/: README.md  architecture.md  browse-mode.md  cloudflare-edge-pipeline.md  deploy-beta.md  handoff-auto-merge-chapters.md  handoff-scan-stage.md  hard-rules.md  inpaint-mask-generation.md  lens-native-grouping.md  material-architecture.md  render-archive-storage.md  render-container-fit.md  reverse-engineering-manga-sources.md  web-svelte-reader-port.md  worker-pipeline-tuning.md
examples/: bench_inpaint.rs  detect_only.rs  inspect_masks.rs  translate.rs  translate_chapter.rs  translate_series.rs  try_canvas_agent.rs  try_context_agent.rs
ext/: .env.example  .gitignore  README.md  globals.d.ts  package.json  tsconfig.json  wxt.config.ts
ext/core/: config.ts
ext/entrypoints/: background.ts  content.ts
ext/shared/: tokens.css
ext/shell/: pipeline.ts
python/typoon_inpaint/: __init__.py  artifact_sink.py  domain.py  pipeline.py  scan.py
python/typoon_inpaint_py/: __init__.py  artifact_sink.py  pipeline.py  scan.py
scripts/: audit_all.py  audit_chapter.py  audit_summary.py  audit_translations.py  backfill_relink_materials.py  bench_vision_latency.py  comix_cookies.py  comix_download.py  comix_download.sh  convert_coreml.py  data_stats.py  download_chapter.py  download_training_data.sh  e2e_translate.py  lama_to_coreml.py  local-media.sh  migrate_26_to_27.sql  migrate_27_to_28.sql  migrate_28_to_29.sql  optimize_lama.py  poc_full_pipeline.py  poc_spatial_join.py  poc_v4_e2e.py  probe_brief.py  probe_clustering.py  probe_combined.py  probe_comic_detector.py  probe_detector_guided_lens.py  probe_deterministic.py  probe_faces.py  probe_image.sh  probe_lens_bubble.py  probe_lens_close_erase.py  probe_lens_dropped_column.py  probe_lens_fullpage_lang.py  probe_lens_fullpage_transforms.py  probe_lens_reocr_block_vs_row.py  probe_lens_reocr_lang.py  probe_lens_reocr_row.py  probe_lens_rowgap.py  (+14 more)
scripts/distill/: README.md  dataset.py  export_onnx.py  generate_teacher_cache.py  lama_model.py  model.py  overfit_test.py  requirements.txt  setup_and_train.sh  setup_and_train_small.sh  small_model.py  train.py  train_colab.ipynb  train_small.py
scripts/probes/: calibrated_pad.sh
scripts/train_rec_ja/: README.md  openocr_finetune_ja.yml  prepare_manga109.py  runpod_openocr.sh
server/: .env.example  Makefile  go.mod  go.sum  run.sh  sqlc.yaml
server/migrations/: 0001_init.sql  0002_app_settings.sql
spike/: e2e.mjs  package-lock.json  package.json
spike/brief/: package-lock.json  package.json  wrangler.toml
spike/inpaint/: Dockerfile  package-lock.json  package.json  wrangler.toml
spike/media/: package-lock.json  package.json  wrangler.toml
spike/pipeline/: package-lock.json  (+2 more)
src/: config.rs  image_io.rs  lib.rs  main.rs  runner.rs
tests/: bench_lag.py  bench_pipeline.py  bench_real.py  conftest.py  test_bing_detector.py  test_blob_store.py  test_brief.py  test_chapter_brief_store.py  test_chapter_images.py  test_detect.py  test_e2e.rs  test_en.rs  test_erase.py  test_erasers.py  test_grouping_stripe_filter.py  test_http.rs  test_ja.rs  test_knowledge.py  test_lens_block_classification.py  test_lens_filters.py  test_lens_grouper.py  test_lens_grouper_refined_mask.py  test_lens_grouper_tategaki.py  test_lens_grouper_typesetting.py  test_lens_grouper_words.py  test_lens_row_recovery.py  test_lens_spatial_join.py  test_llm_agent.py  test_llm_ir.py  test_llm_providers.py  test_merge.py  test_overlay.rs  test_page_wire_format.py  test_quota.py  test_render_skip_filter.py  test_render_text_normalization.py  test_reports.py  test_scan_chapter_async.py  test_scan_context.py  test_scan_lang_detect.py  (+5 more)
typoon/: __init__.py  cli.py  config.py  downloader.py  engine.py  events.py  models.py  orchestrator.py  paths.py  ports.py  providers.py  runner.py  types.py
typoon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web/: .env.development  .env.production  .npmrc  README.md  index.html  package.json  tsconfig.app.json  vite.config.ts
web-svelte/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts  wrangler.jsonc
(+1045 files in other folders)
