[package]
name = "comic-scan"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["coreml"] }

# Image processing
image = "0.25"
imageproc = "0.25"
ndarray = "0.17"

# Geometry (polygon operations)
geo = "0.29"

# OpenAI SDK
async-openai = { version = "0.33", features = ["chat-completion", "byot"], default-features = false }
futures = "0.3"

# Font metrics (text fitting)
ab_glyph = "0.2"

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Model hub (HuggingFace)
hf-hub = { version = "0.4", features = ["tokio"] }

# SQLite (glossary FTS5)
rusqlite = { version = "0.34", features = ["bundled"] }

# Utilities
base64 = "0.22"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.2", features = ["json"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }

