[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "typoon"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["typoon*"]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.17"]
cuda = ["onnxruntime-gpu>=1.17"]

[project.scripts]
typoon = "typoon.cli:app"
