[project]
name           = "typoon-workspace"
version        = "0.1.0"
description    = "Typoon — manga/manhwa translation pipeline (workspace root)"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/typoon-*"]

[tool.uv.sources]
typoon-core      = { workspace = true }
typoon-vision    = { workspace = true }
typoon-llm       = { workspace = true }
typoon-stages    = { workspace = true }
typoon-translate = { workspace = true }
typoon-storage   = { workspace = true }
typoon-app       = { workspace = true }
bunle            = { path = "/Users/nghiahoang/Dev/bunle/bunle/python" }

[dependency-groups]
dev = [
  "typoon-core",
  "typoon-vision",
  "typoon-llm",
  "typoon-stages",
  "typoon-translate",
  "typoon-storage",
  "typoon-app",
  "pytest>=8",
  "pytest-asyncio>=0.23",
]
