[workspace]

[package]
name    = "typoon-inpaint"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "AOT-GAN inpaint — Rust/Candle. Python extension (local) + HTTP server (container)"

[[bin]]
name = "serve"
path = "bin/serve.rs"
required-features = ["serve"]

[lib]
name = "typoon_inpaint"
crate-type = ["cdylib", "rlib"]

[features]
default  = ["python"]
python   = ["dep:pyo3", "dep:numpy", "dep:ndarray"]
serve    = [
  "dep:axum", "dep:tokio", "dep:tower-http", "dep:bytes",
  "dep:reqwest", "dep:url", "dep:hmac", "dep:sha2", "dep:rmp-serde",
]

[dependencies]
# Candle ML (CPU-only)
candle-core = { version = "=0.9.2", default-features = false }
candle-nn   = { version = "=0.9.2", default-features = false }

# Image codec
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Model loading
safetensors = "0.3"
memmap2     = "0.9"

# HTTP server + R2 S3 client (serve feature only)
axum          = { version = "0.8", features = ["http1", "tokio"], optional = true }
tokio         = { version = "1",   features = ["rt-multi-thread", "macros", "net", "signal"], optional = true }
tower-http    = { version = "0.6", features = ["trace"], optional = true }
bytes         = { version = "1", optional = true }
reqwest       = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"], optional = true }
url           = { version = "2", optional = true }
hmac          = { version = "0.12", optional = true }
sha2          = { version = "0.10", optional = true }
rmp-serde     = { version = "1.3", optional = true }

# Python extension (python feature only)
pyo3   = { version = "0.23", features = ["extension-module"], optional = true }
numpy  = { version = "0.23", optional = true }
ndarray = { version = "0.16", optional = true }

# Shared
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip   = true
lto     = "thin"
opt-level = 3
codegen-units = 1
