[build-system]
requires      = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name            = "typoon-inpaint"
version         = "0.2.0"
requires-python = ">=3.11"
description     = "AOT-GAN inpaint pipeline — Rust core + Python CLI/container"
license         = { text = "GPL-3.0-or-later" }
dependencies    = [
    "msgpack>=1.1",
    "Pillow>=10",
    "numpy>=1.26",
    "click>=8",
    "anyio>=4",
]

[project.optional-dependencies]
scan      = ["chrome-lens-py", "opencv-python-headless", "onnxruntime"]
container = ["fastapi>=0.115", "uvicorn>=0.32", "boto3>=1.34"]
dev       = ["maturin>=1.7", "pytest>=8", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
typoon-inpaint-one    = "typoon_inpaint_py.cli.inpaint_one:main"
typoon-inpaint-folder = "typoon_inpaint_py.cli.inpaint_folder:main"

[tool.maturin]
manifest-path = "crates/inpaint/Cargo.toml"
features      = ["python"]
module-name   = "typoon_inpaint.typoon_inpaint"
python-source = "python"
strip         = true

[tool.mypy]
strict       = true
ignore_missing_imports = true
files        = ["python/typoon_inpaint_py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
